--- a/resources/assets/sass/web_v2/balin.scss
+++ b/resources/assets/sass/web_v2/balin.scss
@@ -114,6 +114,11 @@ body {
 }
 
 /* Home Section */
+.home-product-more{
+    float: right;
+    margin-top: -20px;
+}
+
 /** mobile **/
 .shop-by-style-mobile .title{
 	font-family: 'Sacramento', cursive;
